[package]
name = "frame"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.4", features = ["derive", "env", "string"] }
dirs = "5.0.1"
duckdb = { version = "0.8.1", features = ["httpfs", "json", "parquet", "serde_json"] }
env_logger = "0.10.0"
lazy_static = "1.4.0"
log = "0.4.20"
regex = { version = "1.9.5"}
